k8s/download-orchestrator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: download-orchestrator
  namespace: cse474-prod
  labels:
    app: download-orchestrator
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3001
    protocol: TCP
    name: http
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: metrics
  selector:
    app: download-orchestrator
