k8s/file-quota-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-quota-service
  namespace: cse474-prod
  labels:
    app: file-quota-service
    owner: basant
spec:
  type: ClusterIP
  selector:
    app: file-quota-service
  ports:
  - name: http
    port: 80
    targetPort: 3001
    protocol: TCP
