k8s/file-sharing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-sharing
  namespace: cse474-prod
  labels:
    app: file-sharing
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3002
    protocol: TCP
    name: http
  - port: 9091
    targetPort: 9091
    protocol: TCP
    name: metrics
  selector:
    app: file-sharing
