k8s/file-sharing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-sharing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: file-sharing
  template:
    metadata:
      labels:
        app: file-sharing
    spec:
      containers:
        - name: file-sharing
          image: file-sharing:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: file-sharing
spec:
  selector:
    app: file-sharing
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
