k8s/presigned-url-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presigned-url-service
  namespace: cse474-prod
  labels:
    app: presigned-url-service
    owner: basant
spec:
  type: ClusterIP
  selector:
    app: presigned-url-service
  ports:
  - name: http
    port: 80
    targetPort: 3002
    protocol: TCP
